--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -2,6 +2,12 @@
 @{
     ViewData["Title"] = "Home";
 }
+@model BlogAdmin.Controllers.MainPageData
+
+<style>
+
+</style>
+
 @*<link rel="stylesheet" href="../css/bootstrap.css">*@
 <script src="~/js/bootstrap.js"></script>
 
@@ -13,30 +19,46 @@
 <hr>
 <div class="container">
     <p>&nbsp;</p>
-    <div class="row border border-danger">
-        <div class="col-xs-6 border border-primary">
-            <label class="header">Categories</label>
+    <div class="row ">
+        <div class="col-xs-4 headercol  ">
+            <h2>Categories</h2>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-4 ">
             <input type="button" value="Add" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Category")'"></>
         </div>
     </div>
-    <div class="row">
-        liste de categories
-    </div>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <div class="row">
-        <div class="col-xs-6">
-            <label class="header">Posts</label>
+
+    @foreach (var item in Model.ListOfCategories)
+    {
+        <div class="row">
+            <div class="col-xs-10">
+                @item.title
+            </div>
+
+        </div>       
+    }
+
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <div class="row">
+            <div class="col-xs-6">
+                <h2>Posts</h2>
+            </div>
+            <div class="col-xs-4">
+                <button class="btn btn-primary">Add</button>
+            </div>
         </div>
-        <div class="col-xs-6">
-            <button class="btn btn-primary">Add</button>
+        <div class="row">
+            @foreach (var item in Model.ListOfPosts)
+            {
+                <div class="row">
+                    <div class="col-xs-10">
+                        @item.title
+                    </div>
+
+                </div>
+            }
         </div>
     </div>
-    <div class="row">
-        liste de posts
-    </div>
-</div>
 
 
