--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -32,8 +32,8 @@
     {
         <div class="row">
             <div class="col-xs-10">
-                @item.title
-            </div>
+                <a href="@Url.Action("Edit", "Category" , item)">@item.title</a>
+             </div>
 
         </div>       
     }
@@ -41,7 +41,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-4 headercol ">
                 <h2>Posts</h2>
             </div>
             <div class="col-xs-4">
@@ -53,7 +53,7 @@
             {
                 <div class="row">
                     <div class="col-xs-10">
-                        @item.title
+                        <a href="">@item.title</a>
                     </div>
 
                 </div>
