--- a/Views/Post/AddPost.cshtml
+++ b/Views/Post/AddPost.cshtml
@@ -6,49 +6,41 @@
 @using (Html.BeginForm("Add", "Post", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
 
-    <div class="row border border-primary">
-        <div class="col-xs4">
+    <div class="row">
+        <div name="postcolTitle" class="col-xs4 ">
             <p>Title</p>
         </div>
-        <div class="col-xs-8">
+        <div class="col-xs-8 rowLabelHeader">
             @Html.TextBoxFor(model => model.title)
         </div>
     </div>
 
-    <div class="row border border-primary">
-        <div class="col-xs4 border border-primary">
+    <div class="row">
+        <div id="postcolCat" class="col-xs4  ">
             <p>Category:</p>
         </div>
-        <div class="col-xs-8 border border-primary">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Select
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-
-                @foreach (var item in ViewBag.ListOfCategories)
-                {
-                    <li class="dropdown-item">@item.title</li>
-                }
-            </div>
+        <div class="col-xs-8 rowLabelHeader">
+            @Html.DropDownList("listCategories", new SelectList(ViewBag.ListOfCategories, "categoryID", "title"))
         </div>
     </div>
-    <div class="row">
-        <div class="col-xs4">
+    <div  class="row">
+        <div id="postcolPubDate" class="col-xs4 ">
             Publication Date
         </div>
-        <div class="col-xs-8">
+        <div class="col-xs-8 rowLabelHeader">
             @Html.TextBoxFor(model => model.publicationDate)
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-12">
+        <div  class="col-xs-12">
             Content
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
-            @Html.TextBoxFor(model => model.content)
+            
+            @Html.TextAreaFor(model => model.content)
         </div>
     </div>
     <div class="row">
