--- a/Views/Category/AddCategory.cshtml
+++ b/Views/Category/AddCategory.cshtml
@@ -12,8 +12,8 @@
             <div class="col-xs-6 headercol">
                <h3>Title</h3>
             </div>
-            <div class="col-xs-6">
-                @Html.TextBoxFor(model => model.title)
+            <div class="col-xs-6 focus">
+                @Html.TextBoxFor(model => model.title, new { @autofocus = "autofocus" })
             </div>
         </div>
         <div class="row">
